style.css
body {
  font-family: 'Segoe UI', sans-serif;
  background: #f4f4f9;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  margin: 0;
  padding: 30px 0;
  min-height: 100vh;
}

.voucher {
  background: white;
  border-radius: 15px;
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  padding: 30px;
  text-align: center;
  max-width: 900px;
  margin-bottom: 20px;
}

h1 {
  color: #3f51b5;
}

p {
  font-size: 1.1em;
}

.slideshow-container {
  position: relative;
  max-width: 900px;
  width: 100%;
  border-radius: 15px;
  overflow: hidden;
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  touch-action: pan-y;
  margin-bottom: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.slides {
  display: none;
  max-height: 500px;
  width: auto;
  margin: 0 auto;
  object-fit: contain;
}

.slides.active {
  display: block;
}

button.prev, button.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0,0,0,0.5);
  border: none;
  color: white;
  padding: 16px;
  font-size: 18px;
  border-radius: 50%;
  user-select: none;
  z-index: 10;
}

button.prev {
  left: 10px;
}

button.next {
  right: 10px;
}

